--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
     port: 8080
+spring:
+    datasource:
+        - url: jdbc:h2:mem:test
+    jpa:
+        properties:
+            hibernate:
+                - dialect: org.hibernate.dialect.H2Dialect
