--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,15 @@ server:
     port: 8080
 spring:
     datasource:
-        - url: jdbc:h2:mem:test
+        url: jdbc:h2:tcp://localhost/~/test
+        driverClassName: org.h2.Driver
+        username: sa
+        password:
     jpa:
         properties:
             hibernate:
-                - dialect: org.hibernate.dialect.H2Dialect
+                dialect: org.hibernate.dialect.H2Dialect
+    h2:
+        console:
+            enabled: true
+            path: /h2-console
