--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-frontend/**/node_modules
+/frontend/node_modules/
 
 ### STS ###
 .apt_generated
@@ -36,4 +36,5 @@ out/
 
 ### VS Code ###
 .vscode/
-frontend/.vs
+/frontend/.vs
+
